home/window-managers/hyprland/waybar/style.css
* {
  font-family: "DejaVu Sans Mono", "Font Awesome 6 Free";
  font-weight: bold;
  font-size: 14px;
}

window#waybar {
  background-color: transparent;
  color: @text;
}

tooltip {
  background-color: @base;
  border: 2px solid @sapphire;
  border-radius: 0px;
}

#custom-separator {
  color: @sapphire;
  margin: 0px 5px;
}

#clock,
#custom-weather,
#workspaces,
#window,
#network,
#bluetooth,
#temperature,
#memory,
#battery,
#backlight,
#pulseaudio {
  background-color: transparent;
  padding: 0px 10px;
  margin: 0px;
}

#clock {
  color: @peach;
}

#custom-weather {
}

#workspaces {
  padding: 0px;
}

#workspaces button {
  box-shadow: inherit;
  text-shadow: inherit;
}

#workspaces button:hover {
  color: @surface0;
}

#workspaces button.active {
  color: @surface2;
}

@keyframes blink {
  0% {
    color: @teal;
  }
  50% {
    color: transparent;
  }
  100% {
    color: @teal;
  }
}

#workspaces button.urgent {
  color: @teal;
  animation: blink 1s infinite;
}

#window {
}

window#waybar.empty #window {
  opacity: 0;
}

#network {
  color: @yellow;
  border-right: 0px;
}

#bluetooth {
  color: @blue;
  border: 0px;
}

#bluetooth.off {
  color: @overlay1;
}

#temperature {
  color: @lavender;
  border-right: 0px;
}

#temperature.critical {
  color: @red;
}

#memory {
  color: @flamingo;
  border-right: 0px;
}

#memory.critical {
  color: @red;
}

#battery {
  color: @green;
  border-right: 0px;
}

#battery.warning {
  color: @yellow;
}

#battery.critical {
  color: @red;
}

#backlight {
  color: @text;
  border-right: 0px;
}

#pulseaudio {
  color: @blue;
}

#pulseaudio.microphone {
  color: @mauve;
}

